--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 VITE_APP_CANDY_MACHINE_ID=Eynrg2RxcuMXtAYMH3PQ82yT2AMj2xY9zVpbuuKB9A9k
 VITE_APP_SOLANA_NETWORK=devnet
-VITE_APP_SOLANA_RPC_HOST=https://solana--devnet--rpc.datahub.figment.io
+VITE_APP_SOLANA_RPC_HOST=https://explorer-api.devnet.solana.com
 VITE_APP_GOOGLE_ANALYTICS=
